# magiah

./: .gitignore  BUILD_EXE.md  LICENSE  README-הפעלה.txt  README.he.md  README.md  UI_SPEC.md  launcher.py  magiah.spec  pyproject.toml  run-magiah.bat  הוראות הפעלה - ממשק חדש.md
magiah/: __init__.py  __main__.py  cli.py  config.py  core.py  corpus.py  corpus_hybrid.py  normalize.py  review.py
magiah/webui/: __init__.py  db.py  export.py  hebrew.py  scanner.py  server.py  xlsx.py
magiah/webui/static/: app.js  index.html  style.css
scan-results/: README.md
