[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "magiah"
version = "0.1.0"
description = "Corpus-based typo detection for Hebrew/Aramaic texts - no dictionaries, no AI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["hebrew", "aramaic", "ocr", "typo", "proofreading", "corpus", "torah", "otzaria"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Hebrew",
]

[project.scripts]
magiah = "magiah.cli:main"

[project.urls]
Homepage = "https://github.com/amitaymo/magiah"

[tool.setuptools.packages.find]
include = ["magiah*"]
